[CW42]
* SyncProxyAndroid SDK: add PrerecordedSpeech enum; add GEN3_8-INCH to DisplayType enum; add AUDIO_AAC to FileType enum;

[CW40]
+ SyncProxyAndroid SDK: add SEARCH value to ButtonName enum.
+ SetGlobalProperties dialog: add menuTitle, menuIcon, and keyboardProperties parameters.
+ ShowConstantTBT dialog: add timeToDestination and nextTurnIcon parameters.
+ SyncProxyAndroid SDK: Extend ShowConstantTBT and SetGlobalProperties request objects.
+ PerformInteraction dialog: add interactionLayout parameter.
+ SyncProxyAndroid SDK: Extend PerformInteraction request and response objects.

[CW35.3]
*Fixed crashes on end session/disconnect.

[CW35.2]
*OnKeyboard event support added

[CW35.1]
*Added MobileNavi AppType registration button
*Added Mobile Navi session support
*Added USB Support

[CW37]
* SoftButtons, PerformInteraction, Show, SetGlobalProperties dialogs: change default imageFilename.png to action.png.

[CW36]
* Automatically attempt to reconnect to SDLCore after disconnect.

[CW35]
* SoftButtons can be sent without SystemAction parameter.
* SyncProxyAndroid SDK: Fix creating more and more TCP transports after disconnects.
- SyncProxyAndroid SDK: TCPTransport: Remove the autoReconnect feature, as it's handled by the protocol.
* Revert "Fix SyncProxyTester freezing when trying to send a message after WiFi is connected and then turned off."

[CW34]
* Fix: RegisterAppInterface response with DUPLICATE_NAME shouldn't show up multiple times on WiFi.
* Fix sending GenericRequest message from XML tests.
* Fix SyncProxyTester freezing when trying to send a message after WiFi is connected and then turned off.
* Fix Exit context menu item: it sends EndSession message before exiting.
* PerformInteraction, Show, SetGlobalProperties, Soft Buttons dialogs: use image filenames with extensions by default.
* SyncProxyAndroid SDK: EndSession message includes hash ID that was received with StartSessionACK.
* Fix a crash when trying to send SyncPData request from XML test.
