@@ -438,4 +438,5 @@ public class Names {
     public static final String keyboardProperties = "keyboardProperties";
     public static final String secondaryText = "secondaryText";
     public static String tertiaryText = "tertiaryText";
+    public static final String keypressMode = "keypressMode";
 }
